# economia_monetaria

./: README.md  pyproject.toml  q1.ipynb  q2.ipynb  q3.ipynb
bases/q1/: expectativa_inflacao.csv  hiato_produto.xlsx  pib_demanda.csv
bases/q2/: deposito_a_vista.csv  meio_pagamento.csv  moeda_em_poder_publico.csv  moeda_emitida.csv  reservas_bancarias.csv  transacoes_qtde.csv  transacoes_rs.csv
bases/q3/: evolucao_selic.csv  titulos_detidos_bacen.csv  titulos_emitidos_governo.csv
